// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when authenticated renders 1`] = `
<DocumentFragment>
  <nav
    aria-label="main navigation"
    class="navbar is-fresh is-transparent no-shadow"
    role="navigation"
  >
    <section
      class="container"
    >
      <a
        aria-expanded="false"
        aria-label="menu"
        class="navbar-burger"
        data-target="navbar-menu"
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
      <div
        class="navbar-menu is-static"
        id="navbar-menu"
      >
        <div
          class="navbar-start"
        >
          <a
            class="navbar-item nav-title"
            href="/"
          >
            FRED
          </a>
        </div>
        <div
          class="navbar-end"
        >
          <a
            class="navbar-item is-secondary"
            data-testid="nav-status"
            href="/status"
          >
            User Status
          </a>
          <span
            class="navbar-item link"
            data-testid="nav-logout"
          >
            Log Out
          </span>
        </div>
      </div>
    </section>
  </nav>
</DocumentFragment>
`;

exports[`when unauthenticated renders 1`] = `
<DocumentFragment>
  <nav
    aria-label="main navigation"
    class="navbar is-fresh is-transparent no-shadow"
    role="navigation"
  >
    <section
      class="container"
    >
      <a
        aria-expanded="false"
        aria-label="menu"
        class="navbar-burger"
        data-target="navbar-menu"
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
      <div
        class="navbar-menu is-static"
        id="navbar-menu"
      >
        <div
          class="navbar-start"
        >
          <a
            class="navbar-item nav-title"
            href="/"
          >
            FRED
          </a>
        </div>
        <div
          class="navbar-end"
        >
          <a
            class="navbar-item is-secondary"
            data-testid="nav-register"
            href="/register"
          >
            Register
          </a>
          <a
            class="navbar-item is-secondary"
            data-testid="nav-login"
            href="/login"
          >
            Log In
          </a>
        </div>
      </div>
    </section>
  </nav>
</DocumentFragment>
`;
